<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/equips_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_six"
        android:paddingRight="@dimen/dp_six"
        android:paddingTop="@dimen/dp_sixteen" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/air_power"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_off_air"
                    android:tag="@string/tag_power" />

                <ImageButton
                    android:id="@+id/air_cool"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_zhileng"
                    android:tag="@string/tag_cool" />

                <ImageButton
                    android:id="@+id/air_heat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_zhire"
                    android:tag="@string/tag_heat" />

                <ImageButton
                    android:id="@+id/air_dry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_chushi"
                    android:tag="@string/tag_dry" />
            </LinearLayout>

            <!-- //////////////////////////////////////////////////////// -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_sixteen"
                android:gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/air_fan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_songfeng"
                    android:tag="@string/tag_fan" />

                <ImageButton
                    android:id="@+id/air_swing_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_zidongfx"
                    android:tag="@string/tag_swing_a" />

                <ImageButton
                    android:id="@+id/air_swing_v"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_spsf"
                    android:tag="@string/tag_swing_v" />

                <ImageButton
                    android:id="@+id/air_swing_h"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_czsf"
                    android:tag="@string/tag_swing_h" />
            </LinearLayout>
            <!-- //////////////////////////////////////////////////////// -->


            <!-- //////////////////////////////////////////////////////// -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_sixteen"
                android:gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/air_fspeed_a"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/btn_zdsf"
                    android:tag="@string/tag_fspeed_a" />

                <ImageButton
                    android:id="@+id/air_fspeed_1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_fld"
                    android:tag="@string/tag_fspeed_1" />

                <ImageButton
                    android:id="@+id/air_fspeed_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_flz"
                    android:tag="@string/tag_fspeed_m" />

                <ImageButton
                    android:id="@+id/air_fspeed_h"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/bt_flg"
                    android:tag="@string/tag_fspeed_h" />
            </LinearLayout>
            <!-- //////////////////////////////////////////////////////// -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_sixteen"
                android:gravity="center_vertical" >

                <ImageButton
                    android:id="@+id/air_18"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_18"
                    android:tag="@string/tag_18" />

                <ImageButton
                    android:id="@+id/air_20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_20"
                    android:tag="@string/tag_20" />

                <ImageButton
                    android:id="@+id/air_22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_22"
                    android:tag="@string/tag_22" />

                <ImageButton
                    android:id="@+id/air_24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_24"
                    android:tag="@string/tag_24" />

                <ImageButton
                    android:id="@+id/air_26"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_26"
                    android:tag="@string/tag_26" />

                <ImageButton
                    android:id="@+id/air_28"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_28"
                    android:tag="@string/tag_28" />

                <ImageButton
                    android:id="@+id/air_30"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:src="@drawable/icon_30"
                    android:tag="@string/tag_30" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_seventy_two" />
    </LinearLayout>

</ScrollView>